[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/weapons/WeaponBase.gd" type="Script" id=1]
[ext_resource path="res://entities/weapons/bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Metal.material" type="Material" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.7, 0.15, 0.15 )

[node name="WeaponBase" type="Spatial"]
script = ExtResource( 1 )
bulletScene = ExtResource( 2 )
automaticFireMode = false
fireDelay = 0.2

[node name="LoadProjectileTimer" type="Timer" parent="."]

[node name="ProjectileSpawnPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="WeaponMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.277545, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )
